--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock Paper Scissors</title>
-  <link rel="stylesheet" href="rock-paper-scissors.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <div class="container">
@@ -33,6 +33,6 @@
     <button class="auto-play-button">Auto Play</button>
     <button class="stop-play-button">Stop</button>
   </div>
-<script src="rock-paper-scissors.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
